--- a/src/index.css
+++ b/src/index.css
@@ -64,8 +64,8 @@ body.light-mode {
 }
 @media (max-width:767px){
   .scroll-to-top-button{
-    /* display: none !important; */
-  }
+     display: none !important;
+  } 
 }
 .scroll-to-top-button:hover {
   background-color: #333 !important; 
